fixed letter spacing

--- a/public/stylesheets/page.css
+++ b/public/stylesheets/page.css
@@ -127,7 +127,6 @@ html[xmlns] .clearfix {
 
 #content h1, #content h2, #content h3, #content h4, #content h5, #content h6 {
   color: #081c5a;
-  letter-spacing: -0.05em;
 }
 
 #content .section {
